# imagen

./: .gitignore  Cargo.toml  PROMPT.md  README.md
.beads/: beads.db  beads.db-shm  beads.db-wal  issues.jsonl  last-touched
.blacksmith/: blacksmith.db  blacksmith.db-shm  blacksmith.db-wal  config.toml  config.toml~  lock  status
.blacksmith/sessions/: 0.jsonl  1.jsonl  10.jsonl  11.jsonl  12.jsonl  13.jsonl  14.jsonl  15.jsonl  16.jsonl  17.jsonl  18.jsonl  19.jsonl  2.jsonl  20.jsonl  21.jsonl  22.jsonl  23.jsonl  24.jsonl  25.jsonl  26.jsonl  27.jsonl  28.jsonl  29.jsonl  3.jsonl  30.jsonl  31.jsonl  32.jsonl  33.jsonl  34.jsonl  4.jsonl  5.jsonl  6.jsonl  7.jsonl  8.jsonl  9.jsonl
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  development.md  record-replay.md
prd/: 2026-02-24-feat-imagen-cli-image-generation-plan.md
scripts/: coverage.sh  install.sh  release.sh
src/: cli.rs  config.rs  context.rs  error.rs  main.rs  model.rs  output.rs  params.rs
src/adapters/: mod.rs
src/adapters/live/: gemini.rs  mod.rs  openai.rs
src/adapters/recording/: image_generator.rs  mod.rs
src/adapters/replaying/: image_generator.rs  mod.rs
src/cassette/: config.rs  format.rs  mod.rs  recorder.rs  replayer.rs
src/ports/: image_generator.rs  mod.rs
test_fixtures/: gemini_cat.cassette.yaml  openai_cat.cassette.yaml
tests/: cli.rs  record_replay.rs
